--- a/index.html
+++ b/index.html
@@ -189,18 +189,18 @@
                     <div class="benefits__main-title title">That’s how we do it</div>
                 </div>
                 <div class="benefits__tabs">
-                    <div class="benefits__tutors-tab--active">
+                    <a class="benefits__tutors-tab--active">
                         Experienced Tutors
-                    </div>
-                    <div class="benefits__support-tab">
+                    </a>
+                    <a class="benefits__support-tab">
                         Feedback & Support
-                    </div>
-                    <div class="benefits__library-tab">
+                    </a>
+                    <a class="benefits__library-tab">
                         24/7 Online Library
-                    </div>
-                    <div class="benefits__community-tab">
+                    </a>
+                    <a class="benefits__community-tab">
                         Community
-                    </div>
+                    </a>
                 </div>
                 <div class="benefits__body">
                     <div class="benefits__text">
