--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="header__container">
             <div class="header__title">
-                HR statistics: job search, interviews, hiring and recruiting
+                <h1>HR statistics: job search, interviews, hiring and recruiting</h1>
             </div>
         </div>
     </header>
@@ -76,7 +76,9 @@
                 <div class="about__image"><img class="about__pic" src="img/02.jpg" alt="Who we are"></div>
                 <div class="about__text">
                     <div class="about__subtitle subtitle">Who we are</div>
-                    <div class="abuut__title title">Why Createx?</div>
+                    <div class="abuut__title title">
+                        <h2>Why Createx?</h2>
+                    </div>
                     <div class="about__list">
                         <ul>
                             <li>A fermentum in morbi pretium aliquam adipiscing donec tempus.</li>
@@ -99,7 +101,9 @@
                 <div class="courses__header">
                     <div class="courses__title">
                         <div class="courses__subtitle subtitle">Ready to learn?</div>
-                        <div class="courses__main-title title">Featured Courses</div>
+                        <div class="courses__main-title title">
+                            <h2>Featured Courses</h2>
+                        </div>
                     </div>
                     <div class="courses__button"><a href="#" class="courses__btn">View all courses</a></div>
                 </div>
@@ -186,7 +190,9 @@
             <div class="benefits__container">
                 <div class="benefits__title">
                     <div class="benefits__subtitle subtitle">Our benefits</div>
-                    <div class="benefits__main-title title">That’s how we do it</div>
+                    <div class="benefits__main-title title">
+                        <h2>That’s how we do it</h2>
+                    </div>
                 </div>
                 <div class="benefits__tabs">
                     <a class="benefits__tutors-tab--active">
@@ -204,7 +210,9 @@
                 </div>
                 <div class="benefits__body">
                     <div class="benefits__text">
-                        <div class="benefits__title-text">Only practicing tutors</div>
+                        <div class="benefits__title-text">
+                            <h3>Only practicing tutors</h3>
+                        </div>
                         <div class="benefits__description-text">
                             <p>Urna nisi, arcu cras nunc. Aenean quam est lobortis mi non fames dictum suspendisse.
                                 Morbi mauris cras massa ut dolor quis sociis mollis augue. Nunc, sodales tortor sit diam
@@ -212,7 +220,7 @@
                                 massa ut amet. Amet enim, nisi tempus vehicula.</p>
                         </div>
                     </div>
-                    <div class="benefits__image"><img class="benefits__pic" src="img/09.png" alt=""></div>
+                    <div class="benefits__image"><img class="benefits__pic" src="img/09.png" alt="Our benefits"></div>
                 </div>
             </div>
         </div>
