--- a/index.html
+++ b/index.html
@@ -195,16 +195,16 @@
                     </div>
                 </div>
                 <div class="benefits__tabs">
-                    <a class="benefits__tutors-tab--active">
+                    <a class="benefits__tutors-tab--active" href="#">
                         Experienced Tutors
                     </a>
-                    <a class="benefits__support-tab">
+                    <a class="benefits__support-tab" href="#">
                         Feedback & Support
                     </a>
-                    <a class="benefits__library-tab">
+                    <a class="benefits__library-tab" href="#">
                         24/7 Online Library
                     </a>
-                    <a class="benefits__community-tab">
+                    <a class="benefits__community-tab" href="#">
                         Community
                     </a>
                 </div>
